2006-07-22 Fixed bug #1209354 - DSD

2006-07-22 make scatter() work with the kwarg "color". Closes bug 
           1285750 - DSD 

2006-07-20 backend_cairo.py: require pycairo 1.2.0.
           print_figure() update to output SVG using cairo.

2006-07-19 Added blitting for Qt4Agg - CM

2006-07-19 Added lasso widget and example examples/lasso_demo.py - JDH

2006-07-18 Added blitting for QtAgg backend - CM

2006-07-17 Fixed bug #1523585: skip nans in semilog plots - DSD

2006-07-12 Add support to render the scientific notation label
           over the right-side y-axis - DSD

===============================================================
2006-07-11 Released 0.87.4 at revision 2558

2006-07-07 Fixed a usetex bug with older versions of latex - DSD 

2006-07-07 Add compatibility for NumPy 1.0 - TEO

2006-06-29 Added a Qt4Agg backend. Thank you James Amundson - DSD

2006-06-26 Fixed a usetex bug. On windows, usetex will prcess
           postscript output in the current directory rather than
           in a temp directory. This is due to the use of spaces 
           and tildes in windows paths, which cause problems with 
           latex. The subprocess module is no longer used. - DSD

2006-06-22 Various changes to bar(), barh(), and hist().
           Added 'edgecolor' keyword arg to bar() and barh().
           The x and y args in barh() have been renamed to width
           and bottom respectively, and their order has been swapped
           to maintain a (position, value) order ala matlab. left,
           height, width and bottom args can now all be scalars or
           sequences. barh() now defaults to edge alignment instead
           of center alignment. Added a keyword arg 'align' to bar(),
           barh() and hist() that controls between edge or center bar
           alignment. Fixed ignoring the rcParams['patch.facecolor']
           for bar color in bar() and barh(). Fixed ignoring the
           rcParams['lines.color'] for error bar color in bar()