@@ -1,3 +1,6 @@
+	FigureManager.resize(width, height): resize the window
+	specified in pixels
+	
     barh: x and y args have been renamed to width and bottom
     respectively, and their order has been swapped to maintain
     a (position, value) order.
